--- a/templates/report/kmom03.markdown.twig
+++ b/templates/report/kmom03.markdown.twig
@@ -1,5 +1,14 @@
 ## Kmom03 ##
 
-### Rubrik ###
+### Berätta hur det kändes att modellera ett kortspel med flödesdiagram och psuedokod. Var det något som du tror stödjer dig i din problemlösning och tankearbete för att strukturera koden kring en applikation? ###
+Jag tycker att det kändes bra. Jag känner mig ändå hyfsat "säker" i hur jag ska tänka där. Sen är det svårt att veta om man gjort för mycket eller för lite. Men jag är nöjd med min insats. Jag valde att modifiera mitt flödesdiagram och min psuedokod efter att jag börjat implementera lösningen, då jag insåg att jag behövde lösa det lite annorlunda. Min ursprungliga plan finns under Card-uppgiften, och min modifierade plan under Game-uppgiften.
 
-Skriv din text här...
+
+### Berätta om din implementation från uppgiften. Hur löste du uppgiften, är du nöjd/missnöjd, vilken förbättringspotential ser du i din koden, dina klasser och applikationen som helhet? ###
+Jag valde att ha två klasser för kortleken. En för själva kortleken och en för korten så att säga. Det blev en klass för spelarna (Player) och en klass Game där spelet styrs. Jag är nöjd. Jag tycker att jag har utmanat mig själv, läst på, testat olika vägar och tagit en väg som jag ändå känner mig nöjd med. Förbättringspotential kommer det alltid att finnas, men jag tror absolut att jag skulle behöva träna mer på att återanvända kod och öva på att komma åt olika delar på olika sätt.
+
+### Vilken är din känsla för att koda i ett ramverk som Symfony, så här långt in i kursen? ###
+Jag tycker att det känns bra. Det känns bättre och bättre för varje dag, och jag känner mig mer bekväm med det. Det är roligt att kursen bygger vidare på samma sida. Det gillar jag.
+
+### Vilken är din TIL för detta kmom? ###
+Klasser. Jag känner mig betydligt mer bekväm och medveten om klasser i PHP.
