--- a/templates/report/kmom04.markdown.twig
+++ b/templates/report/kmom04.markdown.twig
@@ -1,5 +1,24 @@
 ## Kmom04 ##
 
-### Rubrik ###
+### Berätta hur du upplevde att skriva kod som testar annan kod med PHPUnit och hur du upplever phpunit rent allmänt. ###
+Jag tyckte att det var väldigt roligt. Det var också väldigt tillfredställande att se varje röd rad bli grön när man skrivit testkod som fungerade. Jag tycker att det rent allmänt är lättförståeligt och det skulle vara roligt att få göra det mer och lära sig ännu mer. 
 
-Skriv din text här...
+
+### Hur väl lyckades du med kodtäckningen av din kod, lyckades du nå mer än 90% kodtäckning? ###
+Jag gjorde bara för Game, men där lyckades jag nå 100% så det kändes extra roligt.
+
+
+### Upplever du din egen kod som “testbar kod” eller finns det delar i koden som är mer eller mindre testbar och finns det saker som kan göras för att förbättra kodens testbarhet? ###
+Jag känner spontant att koden var enkel och testbar. Sen känner jag väl ändå att mitt sätt att skriva kod skulle kunna förbättras på så många sätt och vis generellt.
+
+
+### Valde du att skriva om delar av din kod för att förbättra den eller göra den mer testbar, om så berätta lite hur du tänkte. ###
+Jag behövde inte skriva om min kod, däremot så la jag till en funktion: setCurrentScoreNum, för att kunna testa checkForWinner utan att behöva tilldela kort med rätt värde till varje spelare innan. Jag kände att det var enklare att kunna tilldela den summan jag ville testa för, i stället för att tilldela kort motsvarande det värdet.
+
+
+### Fundera över om du anser att testbar kod är något som kan identifiera “snygg och ren kod”. ###
+Jag känner att testbar kod gör att man funderar mer på att ha små funktioner. Man blir mer medveten om fördelarna med att funktionerna ska hållas enkla, och göra en sak för att lättare kunna testa och återanvända dom. Så på så vis anser jag att testbar kod är både renare och snyggare.
+
+
+### Vilken är din TIL för detta kmom? ###
+Phpunit är veckans TIL. Det är något jag hört om, men inte använt. Det var roligt att få testa på, och jag är övertygad om att det jag lärt mig här kommer följa med mig oavsett vilken kod jag skriver, oavsett språk, i hur koden ska bli snygg och ren.
