--- a/templates/pages/uppgift.html.twig
+++ b/templates/pages/uppgift.html.twig
@@ -22,6 +22,14 @@
         </ul>
     </nav>
 
+    <p class="ovning"> Kmom05 </p>
+
+    <nav class="navbar">
+        <ul>
+            <li><a href="{{ path("library") }}">Library</a></li>
+        </ul>
+    </nav>
+
     <div class="practice-img">
         <img src="{{ asset("img/pexels-practice.jpg") }}" alt="Dekorativ bild">
     </div>
