--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -8,6 +8,8 @@
     .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
 </style>
 
+{{ include('./product/navbar.html.twig') }}
+
 <div class="example-wrapper">
     <h1>Hello {{ controller_name }}! ✅</h1>
 
