--- a/templates/book/navbar.html.twig
+++ b/templates/book/navbar.html.twig
@@ -1,5 +1,7 @@
 <nav class="navbar">
     <ul>
-        <li><a href="{{ path("library") }}">Home</a></li>
+        <li><a href="{{ path("book") }}">Home</a></li> |
+        <li><a href="{{ path("create_book") }}">Create</a></li> |
+        <li><a href="{{ path("book_show_all") }}">Show</a></li>
     </ul>
 </nav>
