--- a/templates/pages/uppgift.html.twig
+++ b/templates/pages/uppgift.html.twig
@@ -26,7 +26,7 @@
 
     <nav class="navbar">
         <ul>
-            <li><a href="{{ path("library") }}">Library</a></li>
+            <li><a href="{{ path("book") }}">Book</a></li>
         </ul>
     </nav>
 
