--- a/templates/book/create.html.twig
+++ b/templates/book/create.html.twig
@@ -19,24 +19,24 @@
 
 <form method="post">
     <fieldset>
-    <legend>Create book form</legend>
+    <legend>Create book</legend>
     <p>
-        <label>Title:
+        <label>Title:<br>
             <input type="text" name="title" value="">
         </label>
     </p>
     <p>
-        <label>ISBN:
+        <label>ISBN:<br>
             <input type="text" name="isbn" value="">
         </label>
     </p>
     <p>
-        <label>Author:
+        <label>Author:<br>
             <input type="text" name="author" value="">
         </label>
     </p>
     <p>
-        <label>Picture name:
+        <label>Picture name:<br>
             <input type="text" name="picture" value="">
         </label>
     </p>
