--- a/templates/book/create.html.twig
+++ b/templates/book/create.html.twig
@@ -36,7 +36,7 @@
         </label>
     </p>
     <p>
-        <label>Picture name:<br>
+        <label>Picture.jpg:<br>
             <input type="text" name="picture" value="">
         </label>
     </p>
