--- a/public/css/style.css
+++ b/public/css/style.css
@@ -468,6 +468,14 @@ nav  li a:focus::after {
 .book-container {
     display: flex;
     flex-wrap: wrap;
+    align-items: stretch;
+    justify-content: center;
+    font-family: 'Open Sans', sans-serif;
+}
+
+.update-container {
+    display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     font-family: 'Open Sans', sans-serif;
 }
