--- a/templates/book/home.html.twig
+++ b/templates/book/home.html.twig
@@ -7,7 +7,7 @@
     <h1>Books</h1>
 
 {{ include('./book/navbar.html.twig') }}
-<p>
+<p class="center">
     Välkommen till detta bibliotek. De tre senast inlagda böckerna är:
 </p>
 
