--- a/templates/book/create.html.twig
+++ b/templates/book/create.html.twig
@@ -11,7 +11,7 @@
 {# read and display all flash messages #}
 {% for label, messages in app.flashes %}
     {% for message in messages %}
-        <div class="flash-{{ label }}">
+        <div class="flash-{{ label }} center">
             {{ message }}
         </div>
     {% endfor %}
