--- a/templates/report/kmom05.markdown.twig
+++ b/templates/report/kmom05.markdown.twig
@@ -1,19 +1,19 @@
 ## Kmom05 ##
 
 ### Gick det bra att jobba igenom övningen med Symfony och Doctrine. Något särskilt du tänkte/reagerade på under övningen? ###
-
+Övningen gick bra att arbeta igenom. Den var tydlig och strukturerad på ett sätt som var enkel att följa. Övningen var också så pass lik och relaterad till uppgiften så att den kändes relevant och gav mycket kunskap att direkt kunna få återanvända.
 
 
 ### Berätta om din applikation och hur du tänkte när du byggde upp den. Tänkte du något speciellt på användargränssnittet? Gick det bra att jobba med ORM i CRUD eller vad anser du om det? ###
-
+Jag tänkte att jag skulle hålla det enkelt. Förutom funktionaliteten så ville jag att det skulle se hyfsat bra ut. Jag utgick från min struktur från kortleken, och överförde den till böckerna, och ändra stylen lite på det. Det gick bra att arbeta med ORM i CRUD. Det tog ett litet tag att komma in i det, men så är det väl med allt.
 
 
 ### Berätta om du gjorde (delar av) extrauppgiften med användare och login. ###
-
+Jag valde att inte göra något av extrauppgiften för att hinna vara färdig i tid till nästa kursmoment. Det är möjligt att jag väljer att gå tillbaka och införa någon del för att öva mer. Men det beror helt och hållet på övriga moment och den tid jag får över.
 
 
 ### Vad är din uppfattning om ORM så här långt och relatera gärna till andra sätt att jobba med applikationskod mot databaser? ###
-
+Det verkar vara ett smidigt sett att arbeta på, och det var roligt att få testa på. Jag tycker om att arbeta med SQL-kod, men detta var också roligt. Jag kommer inte ihåg allt utantill, men övningen och internet i övrigt ger bra med stöd.
 
 ### Vilken är din TIL för detta kmom? ###
-
+Doctrine ORM är min TIL, som låter mig fokusera på att skriva PHP snarare än SQL.
