--- a/templates/pages/uppgift.html.twig
+++ b/templates/pages/uppgift.html.twig
@@ -30,8 +30,17 @@
         </ul>
     </nav>
 
+    <p class="ovning"> Kmom06 </p>
+
+    <nav class="navbar">
+        <ul>
+            <li><a href="{{ path("metrics") }}">Metrics</a></li>
+        </ul>
+    </nav>
+
     <div class="practice-img">
         <img src="{{ asset("img/pexels-practice.jpg") }}" alt="Dekorativ bild">
     </div>
+
 
 {% endblock %}
