--- a/templates/metrics/home.html.twig
+++ b/templates/metrics/home.html.twig
@@ -24,7 +24,7 @@
 
 <h4>Cohesion</h4>
 <p>
-    Text
+    En klass eller metod med hög kohesion är självständig och ämnad för något specifikt och dess metoder utför uppgifter enbart för klassen. Kohesion innebär således en samverkan och att metoderna utbyter data med varandra när de löser en uppgift. Desto mer en metod fokuserar på en enda uppgift, desto enklare blir det att döpa och förstå koden, men även att ändra/underhålla koden.
 </p>
 
 <h4>Coupling</h4>
