--- a/templates/metrics/home.html.twig
+++ b/templates/metrics/home.html.twig
@@ -7,35 +7,37 @@
     <h1>Metrics</h1>
 
 <h2>Kodkvalitet</h2>
-<p>
-    Text
-</p>
+
+
 
 <h3>Introduktion</h3>
 <h4>Coverage</h4>
 <p>
-    Text
+    Kodtäckning signalerar att 
 </p>
 
 <h4>Complexity</h4>
 <p>
-    Text
+    Desto fler beslutspunkter som är i koden, desto mer komplex kod blir det. Ett sätt att visualisera det är att se hur koden är tabbad. Desto mer tabbad kod, desto fler beslutspunkter finns det. Om en metod har mer än 10 beslutspunkter så är det bra att se över metoden och dess komplexitet.
 </p>
 
 <h4>Cohesion</h4>
 <p>
-    En klass eller metod med hög kohesion är självständig och ämnad för något specifikt och dess metoder utför uppgifter enbart för klassen. Kohesion innebär således en samverkan och att metoderna utbyter data med varandra när de löser en uppgift. Desto mer en metod fokuserar på en enda uppgift, desto enklare blir det att döpa och förstå koden, men även att ändra/underhålla koden.
+    Kohesion är ett mätvärde för hur bra koden hänger ihop. En klass eller metod med hög kohesion är självständig och ämnad för något specifikt och har inte flera ansvarsområden. Kohesion innebär således en samverkan och att metoderna utbyter data med varandra när de löser en uppgift. Desto mer en metod fokuserar på en enda uppgift, desto enklare blir det att döpa och förstå koden, men även att ändra/underhålla koden.
 </p>
 
 <h4>Coupling</h4>
 <p>
-    Text
+    Koppling har att göra med hur många beroende en klass har till andra klasser. Lösa kopplingar är bra eftersom det blir lättare att jobba med klasser utan externa beroenden. Så fort det blir hårda kopplingar och fler beroenden så blir det svårare att underhålla.
 </p>
+
+
 
 <h3>Phpmetrics</h3>
 <p>
     Text
 </p>
+
 
 
 <h3>Scrutinizer</h3>
@@ -44,10 +46,14 @@
 </p>
 
 
+
+
 <h3>Förbättringar</h3>
 <p>
     Text
 </p>
+
+
 
 <h3>Diskussion</h3>
 <p>
