--- a/public/css/style.css
+++ b/public/css/style.css
@@ -241,6 +241,18 @@ p.ovning {
     margin-bottom: 1vh;
 }
 
+.metrics-img img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    margin-bottom: 1vh;
+    border: 1px solid black;
+}
+
+.rubrikfarg {
+    color: #2A6159;
+}
+
 h1, h2, h3, h4, h5 {
     font-family: 'Open Sans', sans-serif;
     margin-top: 0;
