några förbättringar gjorda

--- a/templates/metrics/home.html.twig
+++ b/templates/metrics/home.html.twig
@@ -73,6 +73,8 @@
     På några ställen får jag förslaget att använda parenteser (Consider adding parentheses for clarity), så det vill jag testa att lägga till bara för att se om det gör någon skillnad.
     <br><br>
     Jag tänkte även ta bort "död-kod" som identifierats, för att se hur det påverkar resultatet.
+    <br><br>
+    (The expression return $value could return the type string which is incompatible with the type-hinted return integer. Consider adding an additional type-check to rule them out). Jag kommer även lägga till en kontroll för returvärdet.
 </p>
 
 
