--- a/templates/metrics/home.html.twig
+++ b/templates/metrics/home.html.twig
@@ -78,9 +78,10 @@
 </p>
 
 
+
 <h3 class="rubrikfarg">Diskussion</h3>
 <p>
-    Text
+    Jag tycker att Phpmetrics är svårare att se "vad som behöver göras". Jag har därför valt att fokusera på Scrutinizers påpekanden och förslag på förbättringar. Först glömde jag kolla composer phpunit innan jag commitade, så visade sig att jag skapade en ny bug. Sen tog det ett tag att förstå hur jag skulle bli av med den på samtidigt som jag fixade det jag hade tänkt mig att fixa. 
 </p>
 
 
