--- a/templates/incl/navbar.html.twig
+++ b/templates/incl/navbar.html.twig
@@ -4,6 +4,7 @@
         <li><a href="{{ path("about") }}">About</a></li>
         <li><a href="{{ path("ovning") }}">Övningar</a></li>
         <li><a href="{{ path("uppgift") }}">Uppgifter</a></li>
+        <li><a href="{{ path("project") }}">Project</a></li>
         <li><a href="{{ path("report") }}">Report</a></li>
     </ul>
 </nav>
