Adventure game påbörjat

--- a/templates/book/books.html.twig
+++ b/templates/book/books.html.twig
@@ -13,10 +13,10 @@
         {% if books is defined %}
         {% set picture = "img/nopicture.jpg" %}
             {% for book in books %}
-            <a href="{{ path("book_by_id", {'idNum': book.idNum} ) }}">
+            <a href="{{ path("book_by_id", {'id': book.id} ) }}">
                 <div class="books">
                     <div class="booktitle">
-                        {{ book.idNum }}:
+                        {{ book.id }}:
                         {{ book.title }}
                     </div>
 
