--- a/templates/project.html.twig
+++ b/templates/project.html.twig
@@ -6,7 +6,7 @@
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
         <meta content="width=device-width, initial-scale=1" name="viewport" />
         <link rel="icon" href="{{ asset("favicon.ico") }}">
-        <link rel="stylesheet" href="{{ asset("css/style.css") }}" />
+        <link rel="stylesheet" href="{{ asset("css/project.css") }}" />
         
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,7 +15,7 @@
     </head>
     <body>
 
-        {{ include('./incl/header.html.twig') }}
+        {{ include('./incl/projectheader.html.twig') }}
 
         <div class="body-container">
         {% block body %}{% endblock %}
