--- a/templates/room/navbar.html.twig
+++ b/templates/room/navbar.html.twig
@@ -1,6 +1,7 @@
 <nav class="navbar">
     <ul>
-        <li><a href="{{ path("create_room") }}">Create</a></li> |
-        <li><a href="{{ path("room_show_all") }}">Show</a></li>
+        <li><a href="{{ path("create_room") }}">Create room</a></li> |
+        <li><a href="{{ path("room_show_all") }}">Show rooms</a></li> |
+        <li><a href="{{ path("adventure_show_all") }}">Adventures</a></li>
     </ul>
 </nav>
