--- a/templates/project.html.twig
+++ b/templates/project.html.twig
@@ -7,6 +7,7 @@
         <meta content="width=device-width, initial-scale=1" name="viewport" />
         <link rel="icon" href="{{ asset("favicon.ico") }}">
         <link rel="stylesheet" href="{{ asset("css/project.css") }}" />
+        <script type="text/javascript" src="{{ asset("js/project.js") }}"></script>
         
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
