--- a/templates/project/about.html.twig
+++ b/templates/project/about.html.twig
@@ -12,10 +12,16 @@
     fem "rum", eller önamn. Där kan man ta sig vidare till näsa del av spelet, utföra en handling, eller gå tillbaka.
 </p> 
 
-<a href="#">Phpdoc</a><br>
+<h2>Projektets kodkvalitet</h2>
+<p>
+    
+</p>
+
+<a href="{{ asset("../docs/api") }}">Phpdoc</a><br>
 <a href="{{ asset("../docs/metrics") }}">Phpmetrics</a><br>
 <a href="https://github.com/Aeen/anns21-mvc">GitHub</a><br>
 <a href="https://scrutinizer-ci.com/g/Aeen/anns21-mvc/inspections">Scrutinizer</a><br><br>
 <a href="{{ path("reset-database") }}">Återställ databas</a>
+
 
 {% endblock %}
