--- a/templates/incl/projectnavbar.html.twig
+++ b/templates/incl/projectnavbar.html.twig
@@ -2,6 +2,7 @@
     <ul>
         <li><a href="{{ path("project") }}">Home</a></li> | 
         <li><a href="{{ path("create_game") }}">Play</a></li> |
+        <li><a href="{{ path("cleancode") }}">Clean code</a></li> |
         <li><a href="{{ path("project_about") }}">About</a></li>
     </ul>
 </nav>
