--- a/templates/project/about.html.twig
+++ b/templates/project/about.html.twig
@@ -14,7 +14,7 @@
 
 <h2>Projektets kodkvalitet</h2>
 <p>
-    
+    Jag har framförallt använd mig av phpcs, phpstan och phpmd för att kontrollera min kod. Från förgående kmom har jag tagit med mig kunskapen om komplex kod. Jag har tänkt extra när jag skrivit, och efter att koden utvärderas med scrutinizer har jag förbättrad den ytterligare. Att dela upp koden och använda mindre if-satser, och istället organisera koden annorlunda är något jag känner att jag mer och mer naturligt faller in i, så det känns kul.
 </p>
 
 <a href="{{ asset("../docs/api") }}">Phpdoc</a><br>
